--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vituum": "^1.1.0"
   },
   "dependencies": {
-    "@vituum/vite-plugin-pug": "^1.1.0"
+    "@vituum/vite-plugin-pug": "^1.1.0",
+    "swiper": "^11.1.4"
   }
 }
