feat(sale): создает модалки и добавляет стили

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@vituum/vite-plugin-pug": "^1.1.0",
+    "scroll-lock": "^2.1.5",
     "swiper": "^11.1.4"
   }
 }
